# reflow-controller

./: CLAUDE.md  Cargo.toml  memory.x
boards/rp2040/: Cargo.toml
boards/rp2040/src/: main.rs
boards/std/: Cargo.toml
boards/std/src/: main.rs
example_profiles/: lead_free.txt  leaded.txt  low_temp.txt
logs/: devttyACM1_2025_09_22.11.56.25.702.txt  devttyACM1_2025_09_22.16.40.14.013.txt  devttyACM1_2025_09_22.17.21.56.626.txt  devttyACM1_2025_09_22.17.37.09.998.txt  devttyACM1_2025_09_23.14.42.35.460.txt  devttyACM2_2025_09_21.19.30.48.931.txt
platform/rp2040/: Cargo.toml
platform/rp2040/.cargo/: config.toml
platform/rp2040/src/: main.rs
platform/std/: .gitignore  Cargo.toml  README.md  USAGE_EXAMPLE.md  analyze_simple.py  reflow_data.csv  run_with_logging.sh  serial_logger.py
platform/std/src/: main.rs
profiles/: profile.rcode
src/: display.rs  heater.rs  heater_rp2040.rs  heater_std.rs  home_screen.rs  inputs.rs  inputs_rp2040.rs  inputs_std.rs  lib.rs  main.rs  mcp9600.rs  outputs.rs  outputs_rp2040.rs  outputs_std.rs  pid.rs  profile.rs  reflow_controller.rs  relay.rs  resources_rp2040.rs  running_screen.rs  sd_profile_reader.rs  serial_port.rs  splash_screen.rs  temperature_sensor.rs  temperature_sensor_mcp9600.rs  temperature_sensor_mock.rs  usb_interface.rs  usb_interface_rp2040.rs  usb_interface_std.rs
