[package]
name = "reflow-controller"
version = "0.1.0"
edition = "2021"

[features]
rp2040 = ["embassy-rp", "assign-resources", "panic-probe", "defmt"]
std = []
ramp_setpoint = []


[dependencies]
embassy-embedded-hal = { version = "0.5.0", path = "../embassy/embassy-embedded-hal" }
embassy-sync = { version = "0.7.2", path = "../embassy/embassy-sync" }
embassy-executor = { version = "0.9.0", path = "../embassy/embassy-executor" }
embassy-time = { version = "0.5.0", path = "../embassy/embassy-time" }
embassy-rp = { version = "0.8.0", path = "../embassy/embassy-rp", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
], optional = true }

embassy-usb-logger = { version = "0.5.1", path = "../embassy/embassy-usb-logger" }
embassy-futures = { version = "0.1.2", path = "../embassy/embassy-futures" }

embedded-graphics = "0.8.1"
assign-resources = { version = "0.5.0", optional = true }
critical-section = "1.1"


panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

defmt = { version = "1.0.1", optional = true }

fixed = "1.23.1"
fixed-macro = "1.2"
bitflags = "2.4"

display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
display-interface = "0.5.0"
log = "0.4"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# Core Serde without std
serde = { version = "1", default-features = false, features = ["derive"] }


# Heapless collections with Serde impls
heapless = { version = "0.8", features = ["serde"] }
# Option B: JSON in no_std (writes into a fixed buffer you provide)
serde-json-core = "0.6"
embedded-hal-async = "1.0.0"

# SD card support - will be added when hardware integration is ready
# embedded-sdmmc = "0.8"
# nb = "1.1"
