[package]
edition = "2021"
name = "reflow-controller-rp2040"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", path = "../../../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.7.2", path = "../../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.9.0", path = "../../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", path = "../../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", path = "../../../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
critical-section = "1.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"


reflow-controller = { version = "0.1.0", path = "../../../reflow-commands" }
embedded-graphics = "0.8.1"
