[package]
edition = "2021"
name = "reflow-controller-std"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.7.1", path = "../../../embassy/embassy-sync", features = ["log"] }
embassy-executor = { version = "0.9.0", path = "../../../embassy/embassy-executor", features = ["arch-std", "executor-thread", "log"] }
embassy-time = { version = "0.5.0", path = "../../../embassy/embassy-time", features = ["log", "std", ] }
critical-section = { version = "1.1", features = ["std"] }


env_logger = "0.9.0"
log = "0.4.14"

reflow-controller = { version = "0.1.0", path = "../../../reflow-commands" }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
