[package]
name = "reflow-controller-std"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.7.2", path = "../../../embassy/embassy-sync", features = [
    "log",
] }
embassy-executor = { version = "0.9.0", path = "../../../embassy/embassy-executor", features = [
    "arch-std",
    "executor-thread",
    "log",
] }
embassy-time = { version = "0.5.0", path = "../../../embassy/embassy-time", features = [
    "log",
    "std",
] }
embedded-io-async = { version = "0.6.1" }
embedded-io-adapters = { version = "0.6.1", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }

async-io = "1.6.0"
env_logger = "0.9.0"
futures = { version = "0.3.17" }
log = "0.4.14"
nix = "0.26.2"
clap = { version = "3.0.0-beta.5", features = ["derive"] }
rand_core = { version = "0.9.1", features = ["std", "os_rng"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"
